# Lab-2

./: CMakeLists.txt
src/: benchmark.cpp  power.cpp  power.hpp
tests/: test_power.cpp
